$Id: ChangeLog,v 1.39 2004/04/07 16:44:46 h_oudejans Exp $

2004-04-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed windows build system. config.h is now created.
	   Unfortunately, I don't know how to set it as a dependency for
	   other files, so if it doesn't work, do a 'rebuild all'
	   - Moved dsp and dsw files to the build directory.
	   - Remove hardpaths (this means that the paths to wx includes and
	     and libs need to be added to: tools->options->directories in vc++).
	     There's no way to automate this, sorry :(	

2004-04-07 Herman Oudejans <hn.oudejans@quicknet.nl>
	* History is updated when a new disk or tape is inserted while
	   openMSX is running.
	* History and used hardware is saved before openMSX is started and 
	   when a disk or tape is changed when openMSX is running.
	* Fixed: Media comboboxes were cleared on launch.

2004-04-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* When the configuration dialog is closed with Ok, catapult will
	   now run openmsx -v to make sure all parameter are set properly.
	* If the openmsx executable and/or share directory is changed,
	   catapult tries to restore the previous machine and extensions.	

2004-04-05 Maarten ter Huurne <maarten@treewalker.org>
	* Added "make install".

2004-04-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Frameskip works now for openmsx 1198 and higher
	* Minor fixes in the launch script interpreter.

2004-04-04 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Catapult no longer segfaults when it can't find the resources
	* launching openmsx is now script based. Should work faster and
	   more stable.

2004-04-01 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed memory leaks

2004-03-31 Herman Oudejans <hn.oudejans@quicknet.nl>
	* openmsx -v is now used to find out openmsx' possibilities
	* fixed a bug when there is not soundhardware available	

2004-03-28 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed linux disk/cart/tape combobox problems