@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.39 2004/04/07 16:44:46 h_oudejans Exp $
+$Id: ChangeLog,v 1.40 2004/04/08 13:21:31 h_oudejans Exp $
 
 2004-04-08 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Fixed windows build system. config.h is now created.
@@ -7,7 +7,8 @@ $Id: ChangeLog,v 1.39 2004/04/07 16:44:46 h_oudejans Exp $
 	   - Moved dsp and dsw files to the build directory.
 	   - Remove hardpaths (this means that the paths to wx includes and
 	     and libs need to be added to: tools->options->directories in vc++).
-	     There's no way to automate this, sorry :(	
+	     There's no way to automate this, sorry :(
+	* Devices can now be plugged in the joystick ports
 
 2004-04-07 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* History is updated when a new disk or tape is inserted while
